SigmaCodebackup3rdSep/objects/Order_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Payments</relationshipLabel>
        <relationshipName>Order_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <formula>Amount__c  -  Refunded_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Payments</relationshipLabel>
        <relationshipName>Order_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Payments</relationshipLabel>
        <relationshipName>Order_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered Product</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>Order Payments</relationshipLabel>
        <relationshipName>Order_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Payments (Parent Account)</relationshipLabel>
        <relationshipName>Order_Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Success</fullName>
                </value>
                <value>
                    <fullName>Payment Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charge</fullName>
                </value>
                <value>
                    <fullName>Partial Refund</fullName>
                </value>
                <value>
                    <fullName>Complete Refund</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Order Payments</relationshipLabel>
        <relationshipName>Order_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Order Payments</relationshipLabel>
        <relationshipName>Order_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Order Payments</relationshipLabel>
        <relationshipName>Order_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Payment</label>
    <nameField>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Order Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>